two commits in one... adding API for devices.  Updating supplemental API to not include injury locations
